tests/ui/marker_trait_attr/marker-attribute-with-values.stderr
error: malformed `marker` attribute input
  --> $DIR/marker-attribute-with-values.rs:3:1
   |
LL | #[marker(always)]
   | ^^^^^^^^^^^^^^^^^ help: must be of the form: `#[marker]`

error: malformed `marker` attribute input
  --> $DIR/marker-attribute-with-values.rs:6:1
   |
LL | #[marker("never")]
   | ^^^^^^^^^^^^^^^^^^ help: must be of the form: `#[marker]`

error: malformed `marker` attribute input
  --> $DIR/marker-attribute-with-values.rs:9:1
   |
LL | #[marker(key = "value")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^ help: must be of the form: `#[marker]`

error: aborting due to 3 previous errors

